force-app/main/default/objects/Lot_Allocation__c/Lot_Allocation__c.object-meta.xml
<CustomObject>
    <description>A junction between a Lot and an Order Item, this record represents using part (or all) of a Lot to satisfy part (or all) of an Order.</description>
    <label>Lot Allocation</label>
    <nameField>
        <displayFormat>LA-{000000}</displayFormat>
        <label>Lot Allocation Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lot Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>