force-app/main/default/objects/Lot_Allocation__c/fields/Lot__c.field-meta.xml
<CustomField>
    <fullName>Lot__c</fullName>
    <description>The Lot from which we are allocating some inventory.</description>
    <inlineHelpText>The Lot from which we are allocating some inventory.</inlineHelpText>
    <label>Lot</label>
    <referenceTo>Lot__c</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>