force-app/main/default/objects/Lot_Allocation__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The order line item this allocation helps to satisfy.</description>
    <inlineHelpText>The order line item this allocation helps to satisfy.</inlineHelpText>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Allocations</relationshipLabel>
    <relationshipName>Allocations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>