force-app/main/default/objects/Lot_Allocation__c/validationRules/Units_of_Measure_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Units_of_Measure_Match</fullName>
    <active>true</active>
    <description>Ensures that our units of measure line up.</description>
    <errorConditionFormula>TEXT(Lot__r.Product__r.QuantityUnitOfMeasure) =  TEXT(Order_Product__r.Product2.QuantityUnitOfMeasure)</errorConditionFormula>
    <errorMessage>The Lot and the Order Item must have matching units of measure.</errorMessage>
</ValidationRule>